PP‐016 ピッキングリスト作成 单测对应

--- a/pp-s4apps01/zpickinglist/webapp/css/style.css
+++ b/pp-s4apps01/zpickinglist/webapp/css/style.css
@@ -4,5 +4,5 @@ span[data-background="green"] {
 }
 
 span[data-background="red"] {
-    background-color: #f56d6f !Important;
+    background-color: #f2bfc0 !Important;
 }
