--- a/bi-s4apps01/recoverymanagement/webapp/view/Report005.view.xml
+++ b/bi-s4apps01/recoverymanagement/webapp/view/Report005.view.xml
@@ -17,7 +17,7 @@
                     </smartfilterbar:ControlConfiguration> 
                     <smartfilterbar:ControlConfiguration id="sfbRep05ConfigFiscalMonth" key="FiscalMonth" label="{i18n>FiscalMonth}">
                         <smartfilterbar:customControl>
-                            <Select id="sfbRep05SelFiscalMonth">
+                            <MultiComboBox id="sfbRep05SelFiscalMonth">
                              <items>
                                 <core:Item id="idRep05Month01" key="01" text="01"></core:Item>
                                 <core:Item id="idRep05Month02" key="02" text="02"></core:Item>
@@ -32,7 +32,7 @@
                                 <core:Item id="idRep05Month11" key="11" text="11"></core:Item>
                                 <core:Item id="idRep05Month12" key="12" text="12"></core:Item>
                              </items>
-                           </Select>
+                           </MultiComboBox>
                         </smartfilterbar:customControl>
                     </smartfilterbar:ControlConfiguration>  
 
